# CS3203_3_Backend

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  sample.json
common/include/: base_api_handler.hpp  base_api_strategy.hpp  base_api_strategy_utils.hpp  base_server.hpp  concurrency_manager.hpp  constants.hpp  cors.hpp  database.hpp  database_manager.hpp  date_utils.hpp  env_manager.hpp  jwt_manager.hpp  reddit.hpp  reddit_manager.hpp  utils.hpp
common/src/: base_api_handler.cpp  base_api_strategy.cpp  base_api_strategy_utils.cpp  base_server.cpp  concurrency_manager.cpp  cors.cpp  database.cpp  database_manager.cpp  date_utils.cpp  env_manager.cpp  jwt_manager.cpp  reddit.cpp  reddit_manager.cpp  utils.cpp
scripts/: compile.sh  coverage.sh  deploy.sh  lint.sh  make.sh  test.sh
services/analytics/: CMakeLists.txt  Dockerfile
services/analytics/include/: analytics_api_handler.hpp  analytics_api_strategy.hpp  analytics_server.hpp  api_handler.hpp
services/analytics/src/: analytics_api_handler.cpp  analytics_api_strategy.cpp  analytics_server.cpp  api_handler.cpp  main.cpp
services/data_collection/src/: CMakeLists.txt  main.cpp
services/db/bulk_uploader/: script.ipynb
services/db/db_manager/: CMakeLists.txt  Dockerfile
services/db/initializer/: script.ipynb
services/db/updater/realtime/: CMakeLists.txt  Dockerfile
services/db/updater/realtime/include/: api_handler.hpp
services/db/updater/realtime/src/: api_handler.cpp  main.cpp
services/db_manager/: CMakeLists.txt  Dockerfile
services/db_manager/include/: api_handler.hpp  database.hpp  utils.hpp
services/db_manager/src/: CMakeLists.txt  api_handler.cpp  database.cpp  main.cpp  utils.cpp
services/initializer/: script.ipynb
services/management/: CMakeLists.txt  Dockerfile
services/management/include/: api_handler.hpp  management_api_handler.hpp  management_api_strategy.hpp  management_server.hpp
services/management/src/: api_handler.cpp  main.cpp  management_api_handler.cpp  management_api_strategy.cpp  management_server.cpp
services/pages/admin/analytics/: CMakeLists.txt  Dockerfile
services/pages/admin/analytics/dummy_data/: README.md
services/pages/admin/analytics/include/: api_handler.hpp  change_stream_handler.hpp
services/pages/admin/analytics/src/: api_handler.cpp  change_stream_handler.cpp  main.cpp
services/pages/admin/management/: CMakeLists.txt  Dockerfile
services/pages/admin/management/include/: api_handler.hpp
services/pages/admin/management/src/: api_handler.cpp  main.cpp
services/updater/: CMakeLists.txt  Dockerfile
services/updater/include/: api_handler.hpp  updater_api_handler.hpp  updater_server.hpp
services/updater/src/: api_handler.cpp  main.cpp  updater_api_handler.cpp  updater_server.cpp
services/user/: CMakeLists.txt  Dockerfile
services/user/include/: api_handler.hpp  user_api_handler.hpp  user_api_server.hpp  user_api_strategy.hpp  user_server.hpp
services/user/src/: api_handler.cpp  main.cpp  user_api_handler.cpp  user_api_server.cpp  user_api_strategy.cpp  user_server.cpp
tests/: CMakeLists.txt  test_analytics_api_handler.cpp  test_analytics_api_strategy.cpp  test_analytics_end_to_end.cpp  test_base_api_handler.cpp  test_base_api_strategy.cpp  test_base_api_strategy_utils.cpp  test_database_manager.cpp  test_date_utils.cpp  test_env_manager.cpp  test_main.cpp  test_management_api_handler.cpp  test_management_api_strategy.cpp  test_management_end_to_end.cpp
